InternexDev_Sandbox/src/objects/WF_FH__c.object
<CustomObject>
    <fields>
        <fullName>FH_File_Number__c</fullName>
        <label>File Number(FH01)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FH_File_date_and_time__c</fullName>
        <label>File date and time(FH02)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FH_File_release_number__c</fullName>
        <label>File release number(FH03)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FH_Record_ID__c</fullName>
        <defaultValue>&quot;FH&quot;</defaultValue>
        <label>FH Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FT_File_Number__c</fullName>
        <label>File number(FT01)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FT_File_count__c</fullName>
        <label>File count(FT03)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FT_Name__c</fullName>
        <displayFormat>FT-{00000}</displayFormat>
        <label>WF_FT Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>FT_Record_ID__c</fullName>
        <defaultValue>&quot;FT&quot;</defaultValue>
        <label>FT Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FT_System_date_time__c</fullName>
        <label>System date/time(FT02)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>filename__c</fullName>
        <label>filename</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>WF_FH</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FH-{00000}</displayFormat>
        <label>WF_FH Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WF_FH</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>